bug: Improve dark mode header appearance

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,6 +3,10 @@ html {
   overflow-x: hidden;
 }
 
+.widget-dark {
+  background-color: #121212;
+}
+
 #portlet_liferayaroundtheworld .favicon {
   width: 50px;
 }
@@ -18,6 +22,7 @@ html {
 #portlet_liferayaroundtheworld .dark-mode {
   top: 0px;
   right: 0px;
+  border: 2px solid #fff;
 }
 
 #portlet_liferayaroundtheworld .timedate {
